# showcase-317

./: .gitignore  CMakeLists.txt  README.md  display_fragment.glsl  display_vertex.glsl  main.cpp  main_interactive.cpp  main_simple_interactive.cpp  quick_render.bat  run_interactive.bat
.github/workflows/: cmake.yml
data/: sakura_tree.stl  showcase.json  showcase_bokeh.json  showcase_interactive.json
glad/: CMakeLists.txt
include/: Camera.h  post_process.h  random_disk_sample.h  read_json.h  viewing_ray_dof.h  write_png.h
shaders/: display.frag
src/: DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  creative.json  first_hit.cpp  post_process.cpp  random_disk_sample.cpp  raycolor.cpp  reflect.cpp  viewing_ray.cpp  viewing_ray_dof.cpp  write_png.cpp  write_ppm.cpp
